# learn_python_weather

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
tests/: conftest.py
tests/data/: weather_api_client.py
tests/weather/: test_clients.py
weather/: clients.py  config.py  main.py  models.py  routers.py
