[project]
name = "learn-python-weather"
version = "0.1.0"
description = "The service returns current city temperature."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.6",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]
